# hci-ui

./: .gitignore  .pre-commit-config.yaml  README.md  gui.py  lsl_generator.py  main.py  pyproject.toml  requirements.txt
src/: config.py  corr_window.py  correlation.py  panels.py  plot_area.py  rgb.py  threads.py  viewbox.py  viewer.py
tests/: conftest.py  test_config.py  test_corr_window.py  test_correlation_controller.py  test_data_thread.py  test_panels.py  test_plot_area.py  test_rgb_controller.py  test_viewbox.py
